# Portfolio

./: README.md
Frogger_in_C/versione_processi/: Makefile  padre.h
Frogger_in_C/versione_threads/: buffer.h  frogger_threads  main.c  npc_rana.h  padre.h
HappyLittleStudents_in_C/: Effetti.h
Progetto_pr1/HappyLittleStudents_in_C/: main.c  strutture.c
Progetto_pr1/NIEDDU_THOMAS_66401/: CMakeLists.txt  Effetti.c  MotoreGioco.c  MotoreGioco.h  Strutture.h
versione_processi/: frogger  main.c
versione_processi/versione_processi/: CMakeLists.txt  frogger_processi  npc_rana.c  npc_rana.h  padre.c  prato_tane.c  prato_tane.h  regole_gioco.c  regole_gioco.h
versione_threads/: CMakeLists.txt  Makefile  buffer.c  npc_rana.c  padre.c  prato_tane.c  prato_tane.h  regole_gioco.c  regole_gioco.h
